refactor(database): improve contact handling and LID resolution
- Replace UPSERT_CONTACT with separate INSERT/UPDATE queries for better control
- Enhance LID resolution logic to use bot_contacts table instead of lid_resolutions
- Add contact lookup by name and any JID for better merging
- Improve error handling and logging in contact operations
- Update whitelist plugin to use new contact resolution approach
- Modify docker-compose and db config for better local development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: '3.8'
 
 services:
   postgres:
     image: postgres:15-alpine
     container_name: whatsapp_bot_postgres
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres_admin_password
       POSTGRES_DB: whatsapp_bot_system
     ports:
-      - "5432:5432"
+      - "15432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/init:/docker-entrypoint-initdb.d
