--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ project_code_Nondjs.md
 mockApiServer.js
 project_code.txt
 summary.txt
+project_for_ai.txt
+project_pove_tokens_index.txt
+project_pove_tokens.txt
